testsuite/tests/properties/invalid_comparison/test.out
== foo.lkt ==
foo.lkt:12:56: error: Comparisons require the same type for both operands (got Int and BigInt)
12 |     @export fun compare(lhs: Int, rhs: BigInt): Bool = lhs < rhs
   |                                                        ^^^^^^^^^


lkt_compile: Done
